force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateGoal__c/HealthCloudGA__CarePlanTemplateGoal__c.object-meta.xml
<CustomObject>
    <label>Care Plan Template Goal</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Plan Template Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Template Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>