force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateGoal__c/fields/External_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>External_ID_MVN__c</fullName>
    <description>External ID for the care plan template goal. Used for automatic assignment of care plan templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>