force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateGoal__c/fields/HealthCloudGA__CarePlanTemplateProblem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanTemplateProblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Problem</label>
    <referenceTo>HealthCloudGA__CarePlanTemplateProblem__c</referenceTo>
    <relationshipLabel>Care Plan Template Goals</relationshipLabel>
    <relationshipName>CarePlanTemplateGoals</relationshipName>
    <type>Lookup</type>
</CustomField>