force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateGoal__c/validationRules/HealthCloudGA__ValidateCarePlanGoalAssociation.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__ValidateCarePlanGoalAssociation</fullName>
    <active>true</active>
    <description>Associate the goal with either a care plan template or problem</description>
    <errorConditionFormula>AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ), ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c ) )</errorConditionFormula>
    <errorMessage>Associate the goal with either a care plan template or problem.</errorMessage>
</ValidationRule>