force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateGoal__c/validationRules/HealthCloudGA__ValidateCarePlanGoalAssociationForSingle.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__ValidateCarePlanGoalAssociationForSingle</fullName>
    <active>true</active>
    <description>Associate the goal with only one record</description>
    <errorConditionFormula>AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )) )</errorConditionFormula>
    <errorMessage>Associate the goal with only one record.</errorMessage>
</ValidationRule>